cabal-version: 2.2
name:          hydra-prelude
version:       0.3.0
synopsis:      Custom Hydra Prelude used across other Hydra packages.
author:        IOG
copyright:     2022 IOG
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/input-output-hk/hydra-poc

library
  hs-source-dirs:     src
  exposed-modules:    Hydra.Prelude
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , cardano-binary
    , generic-random
    , io-classes
    , QuickCheck
    , quickcheck-instances
    , relude

  default-extensions:
    NoImplicitPrelude
    FlexibleContexts

  ghc-options:        -Wall -Werror -Wcompat -Wunused-packages
  default-language:   Haskell2010
