cabal-version: 2.2
name:          hydra-prelude
version:       0.11.0
synopsis:      Custom Hydra Prelude used across other Hydra packages.
author:        IOG
copyright:     2022 IOG
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/input-output-hk/hydra

library
  hs-source-dirs:     src
  c-sources:          cbits/revision.c
  exposed-modules:
    Hydra.Prelude
    Hydra.Version

  build-depends:
    , aeson
    , aeson-pretty
    , base
    , base16-bytestring
    , cardano-binary
    , generic-random
    , gitrev
    , io-classes         >=0.3.0.0
    , QuickCheck
    , relude
    , transformers

  default-extensions:
    NoImplicitPrelude
    FlexibleContexts

  ghc-options:        -Wall -Werror -Wcompat -Wunused-packages
  default-language:   Haskell2010
