cabal-version: 3.0
name:          hydra-test-utils
version:       0.19.0
synopsis:      Hydra utilities for testing, aka. "Test Prelude"
author:        IOG
copyright:     2022 IOG
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/cardano-scaling/hydra

common package-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    PatternSynonyms
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
    -Wmissing-deriving-strategies

library
  import:          package-config
  hs-source-dirs:  src
  exposed-modules:
    Test.Hspec.MarkdownFormatter
    Test.Hydra.Prelude
    Test.Network.Ports

  build-depends:
    , base
    , directory
    , filepath
    , hspec
    , hspec-api
    , hspec-core
    , hspec-junit-formatter  <1.1.1
    , HUnit
    , hydra-prelude
    , network
    , port-utils
    , process
    , QuickCheck
    , relude
    , temporary

test-suite hydra-test-util-tests
  import:             package-config
  hs-source-dirs:     test
  other-modules:
    HydraTestUtilsSpec
    Test.HSpec.MarkdownFormatterSpec

  main-is:            Main.hs
  type:               exitcode-stdio-1.0
  build-depends:
    , base
    , filepath
    , hspec
    , hspec-core
    , hydra-prelude
    , hydra-test-utils
    , QuickCheck

  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -threaded -rtsopts
