cabal-version: 3.0
name:          hydra-test-utils
version:       0.22.4
synopsis:      Hydra utilities for testing, aka. "Test Prelude"
author:        IOG
copyright:     2022 IOG
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/cardano-scaling/hydra

common package-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    PatternSynonyms
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
    -Wmissing-deriving-strategies

library
  import:          package-config
  hs-source-dirs:  src
  exposed-modules:
    Test.Hydra.Prelude
    Test.Network.Ports

  build-depends:
    , base
    , directory
    , filepath
    , hspec
    , HUnit
    , hydra-prelude
    , network
    , port-utils
    , process
    , QuickCheck
    , relude
    , temporary
