cabal-version: 3.0
name:          hydra-test-utils
version:       1.2.0
synopsis:      Hydra utilities for testing, aka. "Test Prelude"
author:        IOG
copyright:     2022 IOG
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/cardano-scaling/hydra

common package-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    PackageImports
    PatternSynonyms
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
    -Wmissing-deriving-strategies -Wmissing-local-signatures

library
  import:          package-config
  hs-source-dirs:  src
  exposed-modules:
    Test.Hydra.Prelude
    Test.Network.Ports

  build-depends:
    , base
    , directory
    , filepath
    , generic-random
    , hspec
    , HUnit
    , hydra-prelude
    , network
    , port-utils
    , process
    , QuickCheck
    , quickcheck-arbitrary-adt
    , relude
    , temporary
