cabal-version: 2.2
name:          hydra-tui
version:       0.1.0
synopsis:      TUI for managing a Hydra node
description:   TUI for managing a Hydra node
author:        IOHK
copyright:     2021 IOHK
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/input-output-hk/hydra-poc

flag development
  description: Disable -Werror for development
  default:     False
  manual:      True

common project-config
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -fprint-potential-instances

  if !flag(development)
    ghc-options: -Werror

library
  import:          project-config
  hs-source-dirs:  src
  exposed-modules:
    Hydra.Client
    Hydra.TUI
    Hydra.TUI.Options

  other-modules:   Paths_hydra_tui
  build-depends:
    , aeson
    , async
    , base
    , brick
    , hydra-node
    , hydra-prelude
    , optparse-applicative
    , vty
    , websockets

executable hydra-tui
  import:         project-config
  hs-source-dirs: exe
  main-is:        Main.hs
  build-depends:
    , base
    , hydra-prelude
    , hydra-tui

  ghc-options:    -threaded -rtsopts

test-suite unit
  import:             project-config
  hs-source-dirs:     test
  other-modules:
    Hydra.TUI.OptionsSpec
    Hydra.TUISpec
    Spec

  main-is:            Main.hs
  type:               exitcode-stdio-1.0
  build-depends:
    , base
    , hspec
    , hydra-prelude
    , hydra-node
    , hydra-test-utils
    , hydra-tui
    , optparse-applicative

  build-tool-depends: hspec-discover:hspec-discover -any
  ghc-options:        -threaded -rtsopts
