cabal-version: 2.2
name:          hydra-tui
version:       0.8.0
synopsis:      TUI for managing a Hydra node
description:   TUI for managing a Hydra node
author:        IOG
copyright:     2022 IOG
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/input-output-hk/hydra-poc

flag hydra-development
  description: Disable -Werror for development
  default:     False
  manual:      True

common project-config
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -fprint-potential-instances

  if !flag(hydra-development)
    ghc-options: -Werror

library
  import:          project-config
  hs-source-dirs:  src
  exposed-modules:
    Hydra.Client
    Hydra.TUI
    Hydra.TUI.Options

  other-modules:   Paths_hydra_tui
  build-depends:
    , aeson
    , async
    , base
    , brick
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-ledger-shelley-ma
    , containers
    , hydra-cardano-api
    , hydra-node
    , hydra-prelude
    , io-classes
    , microlens
    , microlens-th
    , optparse-applicative
    , QuickCheck
    , text
    , time
    , vty
    , websockets

executable hydra-tui
  import:         project-config
  hs-source-dirs: exe
  main-is:        Main.hs
  build-depends:
    , base
    , hydra-prelude
    , hydra-tui
    , optparse-applicative

  ghc-options:    -threaded -rtsopts

test-suite tests
  import:             project-config
  hs-source-dirs:     test
  other-modules:
    Hydra.TUI.OptionsSpec
    Hydra.TUISpec
    Spec

  main-is:            Main.hs
  type:               exitcode-stdio-1.0
  build-depends:
    , base
    , blaze-builder
    , bytestring
    , hspec
    , hydra-cardano-api
    , hydra-cluster
    , hydra-node
    , hydra-prelude
    , hydra-test-utils
    , hydra-tui
    , io-classes
    , optparse-applicative
    , temporary
    , unix
    , vty

  build-tool-depends:
    hspec-discover:hspec-discover -any, hydra-node:hydra-node -any

  ghc-options:        -threaded -rtsopts
