cabal-version: 2.2
name:          hydraw
version:       0.0.1
build-type:    Simple

common project-config
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
    -fprint-potential-instances

library
  import:          project-config
  hs-source-dirs:  src
  exposed-modules: Hydra.Painter
  build-depends:
    , aeson
    , base
    , hydra-cardano-api
    , hydra-node
    , hydra-prelude
    , websockets

executable hydraw
  import:         project-config
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts
  build-depends:
    , http-types
    , hydra-cardano-api
    , hydra-node
    , hydra-prelude
    , hydraw
    , safe
    , wai
    , wai-websockets
    , warp
    , websockets
