cabal-version: 2.2

name:               local-cluster
version:            0.1.0
description:        Integration test suite using a local cluster of cardano and hydra nodes
author:             IOHK
copyright:          2021 IOHK
license:            Apache-2.0
license-files:
  LICENSE
  NOTICE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/input-output-hk/hydra-node

flag development
     description: Disable -Werror for development
     default: False
     manual: True

common project-config
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

  if !flag(development)
      ghc-options: -Werror

library
  import: project-config
  hs-source-dirs: src
  exposed-modules:
    HydraNode
    CardanoCluster
    CardanoNode
  build-depends:
      base >=4.7 && <5
    , aeson
    , async
    , bytestring
    , cardano-crypto-class
    , contra-tracer
    , directory
    , filepath
    , hspec-expectations
    , http-conduit
    , hydra-prelude
    , hydra-node
    , io-classes
    , iohk-monitoring
    , network
    , process
    , random-shuffle
    , retry
    , say
    , streaming-commons
    , time
    , temporary
    , text
    , unix
    , unordered-containers
    , websockets
  ghc-options:
    -haddock

executable local-cluster
  import: project-config
  hs-source-dirs: exe
  main-is: local-cluster.hs
  ghc-options:
    -threaded
    -rtsopts
  build-depends: base >=4.7 && <5
               , contra-tracer
               , hydra-prelude
               , local-cluster
               , temporary

test-suite integration
  import: project-config
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
  other-modules:
    Test.EndToEndSpec
    Test.LocalClusterSpec
    Spec
  build-depends:
      base >=4.7 && <5
    , aeson
    , bytestring
    , cardano-crypto-class
    , hspec
    , hspec-core
    , hspec-junit-formatter
    , hydra-prelude
    , hydra-node
    , local-cluster
    , regex-tdfa
    , say
    , temporary
  build-tool-depends:
    hspec-discover:hspec-discover, hydra-node:hydra-node, hydra-node:mock-chain
  ghc-options:
    -threaded
    -rtsopts

benchmark bench-e2e
  import: project-config
  hs-source-dirs: bench
  main-is: Main.hs
  type: exitcode-stdio-1.0
  other-modules:
    Bench.EndToEnd
  build-depends:
      base >=4.7 && <5
    , aeson
    , bytestring
    , cardano-crypto-class
    , containers
    , hydra-node
    , hydra-prelude
    , io-classes
    , lens
    , lens-aeson
    , local-cluster
    , scientific
    , time
    , QuickCheck
  build-tool-depends:
    hydra-node:hydra-node, hydra-node:mock-chain
  ghc-options:
    -threaded
    -rtsopts
