cabal-version:      3.0
name:               local-cluster
version:            0.1.0
synopsis:
  Integration test suite using a local cluster of cardano and hydra nodes

author:             IOHK
copyright:          2021 IOHK
license:            Apache-2.0
license-files:
  LICENSE
  NOTICE

extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/input-output-hk/hydra-poc

flag development
  description: Disable -Werror for development
  default:     False
  manual:      True

common project-config
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

  if !flag(development)
    ghc-options: -Werror

library
  import:          project-config
  hs-source-dirs:  src
  exposed-modules:
    CardanoClient
    CardanoCluster
    CardanoNode
    Hydra.Generator
    Hydra.LogFilter
    HydraNode

  build-depends:
    , aeson
    , async
    , base                  >=4.7 && <5
    , bytestring
    , cardano-api
    , cardano-cli
    , cardano-crypto-class
    , cardano-ledger-core
    , containers
    , contra-tracer
    , directory
    , filepath
    , hspec-expectations
    , http-conduit
    , hydra-node
    , hydra-prelude
    , hydra-test-utils
    , io-classes
    , iohk-monitoring
    , lens
    , lens-aeson
    , network
    , ouroboros-consensus
    , ouroboros-network
    , process
    , QuickCheck
    , random-shuffle
    , retry
    , say
    , streaming-commons
    , temporary
    , text
    , time
    , unix
    , unordered-containers
    , websockets

  ghc-options:     -haddock

executable local-cluster
  import:         project-config
  hs-source-dirs: exe
  main-is:        local-cluster.hs
  ghc-options:    -threaded -rtsopts
  build-depends:
    , base           >=4.7 && <5
    , cardano-cli
    , cardano-node
    , contra-tracer
    , hydra-prelude
    , local-cluster
    , temporary

executable log-filter
  import:         project-config
  hs-source-dirs: exe
  main-is:        log-filter.hs
  ghc-options:    -threaded -rtsopts
  build-depends:
    , aeson
    , base                  >=4.7 && <5
    , bytestring
    , contra-tracer
    , hydra-prelude
    , lens
    , lens-aeson
    , local-cluster
    , optparse-applicative
    , temporary

test-suite integration
  import:             project-config
  hs-source-dirs:     test
  main-is:            Main.hs
  type:               exitcode-stdio-1.0
  other-modules:
    Paths_local_cluster
    Spec
    Test.CardanoClientSpec
    Test.DirectChainSpec
    Test.EndToEndSpec
    Test.GeneratorSpec
    Test.LocalClusterSpec
    Test.LogFilterSpec

  build-depends:
    , aeson
    , base                  >=4.7 && <5
    , base16-bytestring
    , bytestring
    , cardano-api
    , cardano-crypto-class
    , cardano-ledger-core
    , containers
    , filepath
    , hedgehog-quickcheck
    , hspec
    , hspec-core
    , hydra-node
    , hydra-prelude
    , hydra-test-utils
    , lens
    , lens-aeson
    , local-cluster
    , process
    , QuickCheck
    , regex-tdfa
    , say
    , strict-containers
    , temporary
    , text

  build-tool-depends:
    hspec-discover:hspec-discover -any, hydra-node:hydra-node -any,
    hydra-node:mock-chain -any, cardano-node:cardano-node -any,
    cardano-cli:cardano-cli -any

  ghc-options:        -threaded -rtsopts

benchmark bench-e2e
  import:             project-config
  hs-source-dirs:     bench
  main-is:            Main.hs
  type:               exitcode-stdio-1.0
  other-modules:      Bench.EndToEnd
  build-depends:
    , aeson
    , base                  >=4.7 && <5
    , bytestring
    , cardano-crypto-class
    , containers
    , directory
    , filepath
    , hspec
    , hydra-node
    , hydra-prelude
    , hydra-test-utils
    , io-classes
    , lens
    , lens-aeson
    , local-cluster
    , optparse-applicative
    , QuickCheck
    , scientific
    , strict-containers
    , time

  build-tool-depends: hydra-node:hydra-node -any, hydra-node:mock-chain -any
  ghc-options:        -threaded -rtsopts
