name:           pixel-painting
version:        0.0.1
build-type:     Simple
cabal-version: 1.12

executable pixel-painting
  hs-source-dirs:
    app
  main-is:
    Main.hs
  default-language:
    Haskell2010
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -Wunused-packages -threaded -rtsopts
  build-depends:
      base >=4.7 && <5
    , http-types
    , relude
    , safe
    , wai
    , warp
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns
