cabal-version: 2.2
name:          plutus-cbor
version:       1.0.0
synopsis:      On-chain CBOR encoders/decoders
author:        IOG
copyright:     2022 IOG
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/input-output-hk/hydra-poc

flag hydra-development
  description: Disable -Werror for development
  default:     False
  manual:      True

common project-config
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-strictness -fprint-potential-instances

--  if !flag(hydra-development)
--    ghc-options: -Werror

library
  import:          project-config
  hs-source-dirs:  src
  ghc-options:     -haddock
  build-depends:
    , plutus-core
    , plutus-tx
    , plutus-tx-plugin

  exposed-modules: Plutus.Codec.CBOR.Encoding

test-suite unit
  import:             project-config
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts
  build-tool-depends: hspec-discover:hspec-discover -any
  build-depends:
    , base
    , base16
    , binary
    , bytestring
    , cborg
    , containers
    , hspec
    , hydra-prelude
    , hydra-test-utils
    , plutus-cbor
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , QuickCheck

  other-modules:
    Plutus.Codec.CBOR.EncodingSpec
    Spec

library plutus-cbor-common
  hs-source-dirs:
      common
  exposed-modules:
      EncodeTxOut
      Terms
      TxOutGen
  build-depends:
      base >=4.9 && <5
    , hydra-prelude
    , plutus-cbor
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , criterion -any
    , filepath -any
    , bytestring
    , QuickCheck

    
benchmark bench-haskell
  import:             project-config
  type:               exitcode-stdio-1.0
  hs-source-dirs:     bench
  main-is:            BenchHaskell.hs
  ghc-options:        -threaded -rtsopts
  build-tool-depends: hspec-discover:hspec-discover -any
  build-depends:
    , base
    , bytestring
    , cborg
    , criterion
    , QuickCheck
    , serialise
    , hydra-prelude
    , plutus-cbor
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-cbor-common

benchmark bench-plc
  import:             project-config
  type:               exitcode-stdio-1.0
  hs-source-dirs:     bench
  main-is:            BenchPlc.hs
  ghc-options:        -threaded -rtsopts
  build-tool-depends: hspec-discover:hspec-discover -any
  build-depends:
      base
    , bytestring
    , cborg
    , criterion
    , hydra-prelude
    , mtl
    , QuickCheck
    , serialise
    , plutus-cbor
    , plutus-cbor-common
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin

executable encoding-cost
  import:         project-config
  hs-source-dirs: exe/encoding-cost
  main-is:        Main.hs
  other-modules:  Plutus.Codec.CBOR.Encoding.Validator
  build-depends:
    , base
    , base16
    , binary
    , bytestring
    , cardano-ledger-alonzo
    , containers
    , flat
    , hspec
    , hydra-prelude
    , hydra-test-utils
    , mtl
    , plutus-cbor
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , QuickCheck
    , scientific
    , plutus-cbor-common

  if flag(hydra-development)
    -- NOTE(SN): should fix HLS choking on PlutusTx plugin
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

  ghc-options:    -threaded -rtsopts
